kubernetes/client-ds.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: client
  namespace: quobyte
spec:
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/prometheus'
        prometheus.io/port: '55000'
      labels:
        role: client
        version: 1.3.15
    spec:
      containers:
      - name: quobyte-client
        image: quay.io/quobyte/quobyte-client:1.3.15
        command:
          - /bin/sh
          - -xec
          - |
            [...]
        securityContext:
          privileged: true
        ports:
          - name: http-port
            containerPort: 55000
            hostPort: 55000
            protocol: TCP
        readinessProbe:
          timeoutSeconds: 5
          httpGet:
            port: 55000
            path: /
        livenessProbe:
          initialDelaySeconds: 30
          timeoutSeconds: 5
          httpGet:
            port: 55000
            path: /
        volumeMounts:
          - name: k8s-plugin-dir
            mountPath: /var/lib/kubelet/plugins
          - name: etcfs
            mountPath: /etcfs
        lifecycle:
          preStop:
            exec:
              command: ["/bin/bash", "-xc", "umount -f ${QUOBYTE_MOUNT_POINT}"]
      hostPID: true
      nodeSelector:
        quobyte_client: "true"
      volumes:
      - name: k8s-plugin-dir
        hostPath:
          path: /var/lib/kubelet/plugins
      - name: etcfs
        hostPath:
          path: /etc
