kubernetes/data-ds.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: data
  namespace: quobyte
spec:
  template:
    metadata:
      labels:
        role: data
        version: 1.3.6
    spec:
      containers:
      - name: quobyte-metadata
        image: quay.io/quobyte/quobyte-server:1.3.6
        securityContext:
          privileged: true
        command:
          - /bin/bash
          - -xec
          - |
            sed "s/.*MIN_MEM_DATA=.*/MIN_MEM_DATA=${MIN_MEM}/" -i /etc/default/quobyte
            sed "s/.*MAX_MEM_DATA=.*/MAX_MEM_DATA=${MAX_MEM}/" -i /etc/default/quobyte
            if [ ! -f /devices/data/QUOBYTE_DEV_SETUP ]; then
              mkdir -p /devices/data
              cat >/devices/data/QUOBYTE_DEV_SETUP <<EOF
            device.serial=${POD_NAME}-$(uuidgen)
            device.model=Kubernetes-hostDir
            device.type=DATA_DEVICE
            EOF
            fi
            exec /bin/bash -x /opt/main.sh
        volumeMounts:
          - name: devices
            mountPath: /devices/data
        resources:
          requests:
            memory: "512Mi"
            cpu: "200m"
      nodeSelector:
        quobyte_data: "true"
      volumes:
      - name: devices
        hostPath:
          path: /mnt/data
