kubernetes/metadata-ds.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: metadata
  namespace: quobyte
spec:
  template:
    metadata:
      labels:
        role: metadata
        version: 1.3.6
    spec:
      containers:
      - name: quobyte-metadata
        image: quay.io/quobyte/quobyte-server:1.3.6
        securityContext:
          privileged: true
        command:
          - /bin/bash
          - -xec
          - |
            sed "s/.*MIN_MEM_METADATA=.*/MIN_MEM_METADATA=${MIN_MEM}/" -i /etc/default/quobyte
            sed "s/.*MAX_MEM_METADATA=.*/MAX_MEM_METADATA=${MAX_MEM}/" -i /etc/default/quobyte
            if [ ! -f /devices/metadata/QUOBYTE_DEV_SETUP ]; then
              mkdir -p /devices/metadata
              cat >/devices/metadata/QUOBYTE_DEV_SETUP <<EOF
            device.serial=${POD_NAME}-$(uuidgen)
            device.model=Kubernetes-hostDir
            device.type=METADATA_DEVICE
            EOF
            fi
            exec /bin/bash -x /opt/main.sh
        volumeMounts:
          - name: devices
            mountPath: /devices/metadata
        resources:
          limits:
            memory: "512Mi"
            cpu: "200m"
      nodeSelector:
        quobyte_metadata: "true"
      volumes:
      - name: devices
        hostPath:
          path: /mnt/metadata
