kubernetes/qmgmt-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    role: qmgmt-pod
    version: 1.4
  name: qmgmt-pod
  namespace: quobyte
spec:
  containers:
    - name: qmgmt-pod
      image: quay.io/quobyte/quobyte-server:1.4
      command:
        - /bin/bash
        - -xec
        - |
          tail -f /dev/null
