kubernetes/registry-ds.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: registry
  namespace: quobyte
spec:
  template:
    metadata:
      labels:
        role: registry
        version: 1.4
    spec:
      containers:
        - name: quobyte-registry
          image: quay.io/quobyte/quobyte-server:1.4
          securityContext:
            capabilities:
              add:
                - SYS_RESOURCE
          ports:
            - name: rpc-tcp
              containerPort: 7861
              protocol: TCP
            - name: rpc-udp
              containerPort: 7861
              protocol: UDP
            - name: http
              containerPort: 7871
              protocol: TCP
          volumeMounts:
            - name: devices
              mountPath: /devices/dev1
          command:
            - /bin/bash
            - -xec
            - |
              [...]
          resources:
            limits:
              memory: "512Mi"
              cpu: "100m"
          lifecycle:
            preStop:
              exec:
                command: ["/bin/bash", "-xc", "qmgmt -u api registry remove $(grep device.id= /devices/dev1/QUOBYTE_DEV_ID | cut -d= -f2)"]
          readinessProbe:
            timeoutSeconds: 5
            httpGet:
              port: 7871
              path: /
          livenessProbe:
            initialDelaySeconds: 30
            timeoutSeconds: 5
            httpGet:
              port: 7871
              path: /
      nodeSelector:
        quobyte_registry: "true"
      volumes:
      - name: devices
        hostPath:
          path: /mnt/registry
