kubernetes/webconsole-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webconsole
  namespace: quobyte
spec:
  template:
    metadata:
      labels:
        role: webconsole
        version: 1.4
    spec:
      containers:
      - name: quobyte-webconsole
        image: quay.io/quobyte/quobyte-server:1.4
        command:
          - /bin/bash
          - -xec
          - |
            sed "s/MIN_MEM_WEBCONSOLE=.*/MIN_MEM_WEBCONSOLE=${MIN_MEM}/" -i /etc/default/quobyte
            sed "s/MAX_MEM_WEBCONSOLE=.*/MAX_MEM_WEBCONSOLE=${MAX_MEM}/" -i /etc/default/quobyte
            exec /bin/bash -x /opt/main.sh
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        resources:
          limits:
            memory: "300Mi"
            cpu: "100m"
      - name: quobyte-api
        image: quay.io/quobyte/quobyte-server:1.3.15
        ports:
          - name: api
            containerPort: 7860
            protocol: TCP
        command:
          - /bin/bash
          - -xec
          - |
            sed "s/.*MIN_MEM_API=.*/MIN_MEM_API=${MIN_MEM}/" -i /etc/default/quobyte
            sed "s/.*MAX_MEM_API=.*/MAX_MEM_API=${MAX_MEM}/" -i /etc/default/quobyte
            exec /bin/bash -x /opt/main.sh
        resources:
          limits:
            memory: "300Mi"
            cpu: "100m"
        readinessProbe:
            timeoutSeconds: 5
            tcpSocket:
              port: 7860
        livenessProbe:
            initialDelaySeconds: 30
            timeoutSeconds: 10
            tcpSocket:
              port: 7860
