kubernetes/quobyte-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: quobyte
spec:
  clusterIP: "None" # headless service => kube-dns will return pod IPs
  ports:
    - name: quobyte # available as _quobyte._tcp.registry via DNS
      port: 7866
      protocol: TCP
    - name: rpc-udp
      port: 7866
      protocol: UDP
    - name: http
      port: 7876
      protocol: TCP
  selector:
    role: registry
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: quobyte
spec:
  ports:
    - name: api80
      targetPort: 7860
      port: 80
      protocol: TCP
    - name: api
      port: 7860
      protocol: TCP
  selector:
    role: webconsole
---
apiVersion: v1
kind: Service
metadata:
  name: webconsole
  namespace: quobyte
spec:
  ports:
    - name: web80
      targetPort: 8080
      port: 80
      protocol: TCP
    - name: web
      port: 8080
      protocol: TCP
  selector:
    role: webconsole
